Fixed broken style and updated

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -379,7 +379,7 @@ $max-width: 1200px;
 .card__title {
   @media #{$lg} {
     color: $body-background;
-    font-size: 3.5rem;
+    font-size: 2.75rem;
     position: absolute;
     top: 60%;
   }
